--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,32 @@
-#container {
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-row-gap: 40px;
+  grid-column-gap: 20px;
+}
+
+.grid-item {
+  margin: 0 auto;
   text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+h2 {
+  font-size: 12px;
+  font-weight: normal;
+
+  color: #6f7378;
+
+  margin-top: 10px;
+  margin-left: 5px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-popover {
+  --width: 75px !important;
 }
 
-#container a {
-  text-decoration: none;
+@media screen and (max-width: 400px) {
+  .grid {
+    grid-template-columns: 1fr;
+    padding: 0px;
+  }
 }
